--- a/src/main/resources/css/table-light.css
+++ b/src/main/resources/css/table-light.css
@@ -8,40 +8,40 @@
 
 .table-view .column-header-background,
 .table-view .column-header-background .filler{
-    -fx-background-color: #262626;
+    -fx-background-color: #f4f5f7;
 }
 
 .table-view .column-header-background .label{
     -fx-background-color: transparent;
-    -fx-text-fill: #0ed9e0;
+    -fx-text-fill: black;
+    -fx-alignment: center-left;
 }
 
 .table-view .column-header {
-    -fx-background-color: transparent;
+    /*-fx-background-color: transparent;*/
+    -fx-background-color: -fx-table-cell-border-color, f4f5f7;
 }
 
 .table-view .table-cell{
-    -fx-text-fill: #0ed9e0;
-    -fx-alignment: center;
+    -fx-text-fill: black;
+    -fx-alignment: center-left;
 }
 
 .table-row-cell{
-    -fx-background-color: #2b2a2a;
+    -fx-background-color: white;
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0.0em; /* 0 */
     -fx-border-width: 0;
-    /*-fx-border-color: #00ff3a;*/ /* красим горизонтальные */
-    /*-fx-table-cell-border-color: #ba0600;*/  /* красим вертикальные */
 }
 
 .table-row-cell:odd{
-    -fx-background-color: #262626;
+    -fx-background-color: white;
     -fx-background-insets: 0, 0 0 1 0;
     -fx-padding: 0.0em; /* 0 */
 }
 
 .table-row-cell:selected {
-    -fx-background-color: #005797;
+    -fx-background-color: #a9caee;
     -fx-background-insets: 0;
     -fx-background-radius: 1;
 }
