Add GridView, Search, full rewrite IconSetter, more devided mvc model

--- a/src/main/resources/css/table-dark.css
+++ b/src/main/resources/css/table-dark.css
@@ -12,7 +12,7 @@
 }
 
 .table-view .column-header-background .label{
-    -fx-background-color: #262626;
+    /*-fx-background-color: #262626;*/
     /*-fx-background-color: transparent;*/
     -fx-text-fill: #0ed9e0;
 }
